Update disks tasks to set a given disk profile

--- a/roles/vm_infra/tasks/vm_state_present.yml
+++ b/roles/vm_infra/tasks/vm_state_present.yml
@@ -28,6 +28,7 @@
     id: "{{ item.1.id | default(omit) }}"
     size: "{{ item.1.size | default(omit) }}"
     format: "{{ item.1.format | default(omit) }}"
+    profile: "{{ item.1.profile | default(omit) }}"
     storage_domain: "{{ item.1.storage_domain | default(omit) }}"
     interface: "{{ item.1.interface | default(omit) }}"
     bootable: "{{ item.1.bootable | default(omit) }}"
@@ -48,6 +49,7 @@
     id: "{{ item.1.id | default(omit) }}"
     size: "{{ item.1.size | default(omit) }}"
     format: "{{ item.1.format | default(omit) }}"
+    profile: "{{ item.1.profile | default(omit) }}"
     storage_domain: "{{ item.1.storage_domain | default(omit) }}"
     interface: "{{ item.1.interface | default(omit) }}"
     bootable: "{{ item.1.bootable | default(omit) }}"
